--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,7 +80,7 @@ services:
     image: prom/prometheus
     container_name: prometheus
     ports:
-      - "9091:9090"
+      - "127.0.0.1:9090:9090"  # Только локальный доступ!
     volumes:
       - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
       - ./prometheus/web.yml:/etc/prometheus/web.yml
