--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,8 +79,9 @@ services:
   prometheus:
     image: prom/prometheus
     container_name: prometheus
-    ports:
-      - "9091:9090"
+    # Заменяем проброс порта на внутренний экспорт:
+    expose:
+      - "9090"  # Доступно только внутри Docker-сети
     volumes:
       - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
       - ./prometheus/web.yml:/etc/prometheus/web.yml
@@ -89,6 +90,7 @@ services:
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--web.config.file=/etc/prometheus/web.yml'
+      - '--web.listen-address=:9090'
     networks:
       - frontend-backend
 
