--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     image: redis:alpine
     command: [
       "redis-server",
-      "--requirepass $${REDIS_PASSWORD}",
+      "--requirepass ${REDIS_PASSWORD}",
       "--bind 0.0.0.0",
       "--maxmemory 256mb",  # Лимит памяти
       "--maxmemory-policy allkeys-lru",
